Bug 136540 - Unwanted scroll when deleting all comments by an author
Summary: Unwanted scroll when deleting all comments by an author
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:25.8.0 target:26.8.0
Keywords:
Depends on:
Blocks: Writer-Comments Writer-View-Jumps
  Show dependency treegraph
 
Reported: 2020-09-07 09:25 UTC by Telesto
Modified: 2026-07-06 15:32 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (204.83 KB, application/vnd.oasis.opendocument.text)
2020-09-07 09:25 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-09-07 09:25:34 UTC
Description:
Unwanted scroll when deleting all comments by an author 

Steps to Reproduce:
1. Open the attached file
2. Scroll to page 13
3. Select the drop down at the comment: Delete all comments by

Actual Results:
Scrolls up to page 2

Expected Results:
Stays at the position


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: e8b8e7be0b2ad693224cd94062a55610eb69df7e
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-09-07 09:25:46 UTC
Created attachment 165223 [details]
Example file
Comment 2 Telesto 2020-09-26 12:55:44 UTC
Code pointer: https://bugs.documentfoundation.org/show_bug.cgi?id=135244#c12

https://gerrit.libreoffice.org/c/core/+/99714 tdf#135244 fixes PDF export case.
https://gerrit.libreoffice.org/c/core/+/99715 is for print dialog.

I couldn't repro the problem with File->Save As - well, because it was fixed in tdf#41063.

And after looking into Edit -> Track changes -> Record case, I see that it's simply general case of changing track changing options - including view/hide - which may change the view; so jumping to the cursor is a reasonable thing to do in this case.

FTR: if one wants to fix some case, one needs to debug what is the call stack leading to the jump: put a breakpoint inside SwViewShell::MakeVisible (to ScrollMDI). Then find a place in the call stack that is reasonable to create a SfxObjectShell::LockAllViews to guard the place.
Comment 3 Thomas Lendo 2020-09-26 14:08:45 UTC
Confirmed with
Version: 7.1.0.0.alpha0+
Build ID: a8c218a52a639b0e7f689dea878a0421702628e0
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-09-25_22:25:07
Calc: threaded
Comment 4 Thomas Lendo 2020-09-26 14:10:38 UTC
And the view jump exists not only when deleting all comments by an author but also when deleting all comments at all.
Comment 5 Telesto 2020-09-26 14:17:53 UTC
(In reply to Thomas Lendo from comment #4)
Is it possible to get this into they easy hack area [to nearly the whole list of the same..]

Enough examples around (I hope)
https://bugs.documentfoundation.org/show_bug.cgi?id=135244#c12
Comment 6 QA Administrators 2022-09-27 03:31:40 UTC Comment hidden (obsolete)
Comment 7 Roman Kuznetsov 2022-10-03 17:04:45 UTC
Still repro in

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 48b9cbc742de3f6120986cb6cafc92eb5009da82
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded
Comment 8 QA Administrators 2024-10-03 03:17:15 UTC Comment hidden (obsolete)
Comment 9 Commit Notification 2025-04-04 09:58:57 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bfa56c3cabcc4bf037606b4acae325a8a5fd966b

tdf#136540 - Prevent scrolling to cursor during deletion of annotations

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2026-06-12 10:39:06 UTC Comment hidden (off-topic)
Comment 11 Andreas Heinisch 2026-06-12 10:58:23 UTC
A wrong bug number ;(
Comment 12 Buovjaga 2026-07-06 15:32:58 UTC
(In reply to Andreas Heinisch from comment #11)
> A wrong bug number ;(

The correct one was bug 137107