tdf#136540 - Prevent scrolling to cursor during deletion of annotations

Change-Id: Id71030736233c39100b61dd95581dbd079c07c5a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183698
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>